--- a/src/Main.css
+++ b/src/Main.css
@@ -14,6 +14,15 @@
     border-radius: 50%;
 }
 
+.tasker__timer-paper {
+    height: 250px;
+    width: 250px;
+    font-size: 25px;
+    margin: 20px auto;
+    text-align: center;
+    display: table;
+}
+
 .tasker__time-value {
     display: table-cell;
     vertical-align: middle;
@@ -34,4 +43,8 @@
     width: 75%;
     margin: 25px auto;
     text-align: center;
+}
+
+.tasker__table-btn {
+    margin: 18px auto;
 }
