to check the first stage

--- a/src/Main.css
+++ b/src/Main.css
@@ -27,6 +27,10 @@
     text-align: center;
 }
 
+.tasker__tbody {
+    background-color: #e9f6ff;
+}
+
 .tasker__table-btn {
     margin: 18px auto;
 }
